[gd_scene load_steps=23 format=2]

[ext_resource path="res://tscndosyalari/menu/AnaMenuyeDonTusu.tscn" type="PackedScene" id=1]
[ext_resource path="res://resimler/arkaplan/anamenuarka7.png" type="Texture" id=2]
[ext_resource path="res://font/hemi-head-426.rg-bolditalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://script/menu/Ayarlar.gd" type="Script" id=4]
[ext_resource path="res://tscndosyalari/menu/ParaTablo.tscn" type="PackedScene" id=5]
[ext_resource path="res://resimler/menu/ayarlar/off.png" type="Texture" id=6]
[ext_resource path="res://resimler/menu/ayarlar/on.png" type="Texture" id=7]
[ext_resource path="res://resimler/menu/ayarlar/disabledon.png" type="Texture" id=8]
[ext_resource path="res://resimler/menu/ayarlar/disabledoff.png" type="Texture" id=9]
[ext_resource path="res://resimler/menu/ayarlar/Tick.png" type="Texture" id=10]
[ext_resource path="res://resimler/menu/ayarlar/Grabber.png" type="Texture" id=11]
[ext_resource path="res://resimler/menu/ayarlar/GrabberHighlight.png" type="Texture" id=12]
[ext_resource path="res://resimler/menu/ayarlar/GrabberDisabled.png" type="Texture" id=13]
[ext_resource path="res://resimler/menu/ayarlar/LineEditBackground.png" type="Texture" id=14]
[ext_resource path="res://script/menu/KoyuMod.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 40, 40 )

[sub_resource type="Theme" id=4]
CheckButton/icons/off = ExtResource( 6 )
CheckButton/icons/off_disabled = ExtResource( 9 )
CheckButton/icons/on = ExtResource( 7 )
CheckButton/icons/on_disabled = ExtResource( 8 )
HSlider/icons/grabber = ExtResource( 11 )
HSlider/icons/grabber_disabled = ExtResource( 13 )
HSlider/icons/grabber_highlight = ExtResource( 12 )
HSlider/icons/tick = ExtResource( 10 )
HSlider/styles/grabber_area = SubResource( 5 )
HSlider/styles/grabber_area_highlight = SubResource( 5 )
HSlider/styles/slider = SubResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Ayarlar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="arkaplan" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 15 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -696.0
margin_top = -296.0
margin_right = 728.0
margin_bottom = 216.0
color = Color( 0, 0, 0, 0.490196 )

[node name="anamenuyedon" parent="." instance=ExtResource( 1 )]

[node name="Label" type="Label" parent="."]
margin_left = 128.0
margin_top = 448.0
margin_right = 471.0
margin_bottom = 509.0
custom_fonts/font = SubResource( 1 )
text = "Hassasiyet:"
align = 2
valign = 1

[node name="hassasiyet" type="HSlider" parent="Label"]
margin_left = 392.0
margin_top = 8.0
margin_right = 881.0
margin_bottom = 48.0
theme = SubResource( 4 )
min_value = 0.2
max_value = 2.0
step = 0.2
value = 0.6
tick_count = 10
ticks_on_borders = true

[node name="Label0" type="Label" parent="."]
margin_left = 160.0
margin_top = 296.0
margin_right = 466.0
margin_bottom = 357.0
custom_fonts/font = SubResource( 2 )
text = "Oto/Manuel:"
align = 2
valign = 1

[node name="oto" type="CheckButton" parent="Label0"]
margin_left = 336.0
margin_top = 11.0
margin_right = 412.0
margin_bottom = 61.0
focus_mode = 0
theme = SubResource( 4 )
align = 1

[node name="Label1" type="Label" parent="."]
margin_left = 640.0
margin_top = 232.0
margin_right = 1011.0
margin_bottom = 293.0
custom_fonts/font = SubResource( 3 )
text = "Gölgelendirme:"
align = 2
valign = 1

[node name="sis" type="CheckButton" parent="Label1"]
margin_left = 408.0
margin_top = 8.0
margin_right = 484.0
margin_bottom = 56.0
focus_mode = 0
theme = SubResource( 4 )

[node name="Label2" type="Label" parent="."]
margin_left = 96.0
margin_top = 232.0
margin_right = 466.0
margin_bottom = 293.0
custom_fonts/font = SubResource( 3 )
text = "Analog/Dijital:"
align = 2
valign = 1

[node name="input" type="CheckButton" parent="Label2"]
margin_left = 400.0
margin_top = 8.0
margin_right = 476.0
margin_bottom = 56.0
focus_mode = 0
theme = SubResource( 4 )

[node name="Label3" type="Label" parent="."]
margin_left = 296.0
margin_top = 168.0
margin_right = 466.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 3 )
text = "Müzik:"
align = 2
valign = 1

[node name="muzik" type="CheckButton" parent="Label3"]
margin_left = 200.0
margin_top = 8.0
margin_right = 276.0
margin_bottom = 56.0
focus_mode = 0
theme = SubResource( 4 )
pressed = true

[node name="Label4" type="Label" parent="."]
margin_left = 744.0
margin_top = 168.0
margin_right = 1009.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 3 )
text = "Koyu Mod	:"
align = 2
valign = 1

[node name="koyu" type="CheckButton" parent="Label4"]
margin_left = 304.0
margin_top = 8.0
margin_right = 380.0
margin_bottom = 56.0
focus_mode = 0
theme = SubResource( 4 )

[node name="Label5" type="Label" parent="."]
margin_left = 744.0
margin_top = 296.0
margin_right = 1009.0
margin_bottom = 357.0
custom_fonts/font = SubResource( 3 )
text = "KMH/MPH:"
align = 2
valign = 1

[node name="kmh" type="CheckButton" parent="Label5"]
margin_left = 304.0
margin_top = 8.0
margin_right = 380.0
margin_bottom = 56.0
focus_mode = 0
theme = SubResource( 4 )

[node name="Label6" type="Label" parent="."]
visible = false
margin_left = 744.0
margin_top = 360.0
margin_right = 1009.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 3 )
text = "Müzik Ses	:"
align = 1
valign = 1

[node name="ses" type="CheckButton" parent="Label6"]
visible = false
margin_left = 304.0
margin_top = 8.0
margin_right = 380.0
margin_bottom = 56.0
theme = SubResource( 4 )

[node name="MuzikCopyright" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -144.0
margin_right = 640.0
margin_bottom = -67.0
custom_fonts/font = SubResource( 7 )
text = "Music by Kevin MacLeod (incompetech.com)
Licensed under Creative Commons: By Attribution 4.0 License"
align = 1
valign = 1

[node name="ParaTablo" parent="." instance=ExtResource( 5 )]

[connection signal="drag_ended" from="Label/hassasiyet" to="." method="_on_hassasiyet_drag_ended"]
[connection signal="toggled" from="Label0/oto" to="." method="_on_oto_toggled"]
[connection signal="toggled" from="Label1/sis" to="." method="_on_sis_toggled"]
[connection signal="toggled" from="Label2/input" to="." method="_on_input_toggled"]
[connection signal="toggled" from="Label3/muzik" to="." method="_on_muzik_toggled"]
[connection signal="toggled" from="Label4/koyu" to="." method="_on_koyu_toggled"]
[connection signal="toggled" from="Label5/kmh" to="." method="_on_kmh_toggled"]
